# ProjectDarwin

./: CMakeLists.txt
cmake-modules/: FindAllegro.cmake
src/: main.cpp
src/allegro/: allegro.cpp  allegro.hpp  bitmap.cpp  bitmap.hpp  chronometer.hpp  color.hpp  display.cpp  display.hpp  event.hpp  expiring_future.hpp  font.hpp  timer.hpp
src/entities/: dispatcher.hpp  genome.cpp  genome.hpp  organism.cpp  organism.hpp
src/main/: darwin.hpp  grid.cpp  grid.hpp  world.hpp
src/tools/: flagify.hpp
